# sql-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: dependencies.py  main.py
app/agent/: orchestrator.py  templates.py  utils.py
app/agent/schemas/: model.py  state.py
app/core/: config.py  config_setup.py
app/routers/: transaction.py
app/schemas/: model.py
notebooks/: main.html  main.ipynb
