[project]
name = "sql-agent"
version = "0.1.0"
description = "An SQL agent that translates natural language to SQL and executes it against a database."
authors = [
    {name = "Chiew Jie Lun"}
]
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "langchain[openai] (>=0.3.27,<0.4.0)",
    "langgraph (>=0.6.7,<0.7.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "psycopg[binary] (>=3.2.10,<4.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]

[tool.poetry.group.dev.dependencies]
jupyter = ">=1.1.1,<2.0.0"
python-dotenv = ">=1.1.1,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
